# RecruitmentTracker

./: .gitignore  CMakeLists.txt  README.md  setup.bat  setup.ps1  setup.sh  start.ps1
.github/workflows/: build.yml
frontend/: admin.html  index.html  interviewer.html  recruiter.html  reset-password.html
frontend/css/: style.css
frontend/js/: admin.js  common.js  interviewer.js  recruiter.js
src/: app_context.cpp  app_context.h  database.h  logger.h  main.cpp  session.h  sha256.h  smtp.h
src/routes/: admin_routes.cpp  admin_routes.h  auth_routes.cpp  auth_routes.h  interview_routes.cpp  interview_routes.h  notification_routes.cpp  notification_routes.h  skill_routes.cpp  skill_routes.h  slot_routes.cpp  slot_routes.h  smtp_routes.cpp  smtp_routes.h  user_routes.cpp  user_routes.h
tests/: test_database.cpp  test_session.cpp  test_sha256.cpp
